package application;

import java.util.ArrayList;

@FunctionalInterface
public interface RegulateInterface {
    void regulate(Vehicle vehicle);
}
